onclick function add

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
           <div class="margin-top d-flex align-items-center">
             <p class="bold me-5">Memory</p>
 
-            <p role="button" class="p4 button-style" id="eight-GB">
+            <p role="button" onclick="clickBtn('memory-cost',0)" class="p4 button-style" id="eight-GB">
               8GB Unified Memory
             </p>
-            <p role="button" class="p4 button-style" id="sixteen-GB">
+            <p role="button" onclick="clickBtn('memory-cost',200)" class="p4 button-style" id="sixteen-GB">
               <i class="fa-solid fa-circle-plus"></i> 16GB Unified Memory
             </p>
 
@@ -74,23 +74,23 @@
           <div class="margin-top d-flex align-items-center">
             <p class="bold me-5">Storage</p>
 
-            <p role="button" class="p4 button-style" id="ssd-1">
+            <p role="button" onclick="clickBtn('storage-cost',0)" class="p4 button-style" id="ssd-1">
               256GB SSD Storage
             </p>
-            <p role="button" class="p4 button-style" id="ssd-2">
+            <p role="button" onclick="clickBtn('storage-cost',250)" class="p4 button-style" id="ssd-2">
               <i class="fa-solid fa-circle-plus"></i> 512GB SSD Storage
             </p>
-            <p role="button" class="p4 button-style" id="ssd-3">
+            <p role="button" onclick="clickBtn('storage-cost',320)" class="p4 button-style" id="ssd-3">
               <i class="fa-solid fa-circle-plus"></i> 1TB SSD Storage
             </p>
           </div>
           <div class="margin-top d-flex align-items-center">
             <p class="bold me-5">Choose your delivery option</p>
             
-            <p role="button" class="p4 button-style" id="free-delivery">
+            <p role="button" onclick="clickBtn('delivery-cost',0)" class="p4 button-style" id="free-delivery">
               Friday, Aug 25 FREE Prime Delivery
             </p>
-            <p role="button" class="p4 button-style" id="paid-delivery">
+            <p role="button" onclick="clickBtn('delivery-cost',100)" class="p4 button-style" id="paid-delivery">
               <i class="fa-solid fa-circle-plus"></i> Friday, Aug21 Delivery Charge $20
             </p>
           </div>
