--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <p role="button" onclick="clickBtn('delivery-cost',0)" class="p4 button-style" id="free-delivery">
               Friday, Aug 25 FREE Prime Delivery
             </p>
-            <p role="button" onclick="clickBtn('delivery-cost',100)" class="p4 button-style" id="paid-delivery">
+            <p role="button" onclick="clickBtn('delivery-cost',20)" class="p4 button-style" id="paid-delivery">
               <i class="fa-solid fa-circle-plus"></i> Friday, Aug21 Delivery Charge $20
             </p>
           </div>
@@ -126,7 +126,7 @@
             <div class="flex">
               <p class="bold">Add promo Code</p>
               <input type="text" class="p-2" id="promo-input" placeholder="Enter Promo Code" />
-              <button class="btn-secondary rounded py-2 px-3" id="apply-btn">Apply</button>
+              <button class="btn-secondary rounded py-2 px-3" onclick="cuponCode()" id="apply-btn">Apply</button>
               <p class="text-success d-none" id="applied-text">Coupon applied</p>
               <p class="text-danger d-none">Couldn't apply coupon</p>
             </div>
